testsuite/poke.pkl/scons-diag-4.pk
/* { dg-do compile } */

type Foo = struct { offset<int,B> i; long j; };

var a = Foo { i = 10L }; /* { dg-error "" } */
